--- a/examples/minimal/input.yml
+++ b/examples/minimal/input.yml
@@ -1,47 +1,48 @@
-project: T3_minimal_example
+project: MinimalBEESProject
 
-t3:
-  options:
-    max_T3_iterations: 2
-    max_RMG_walltime: '00:00:05:00'
-  sensitivity:
-    adapter: RMGConstantTP
-    top_SA_species: 10
 
-rmg:
-  database:
-    thermo_libraries: ['primaryThermoLibrary']
-    kinetics_libraries: []
-  species:
-    - label: H2
-      smiles: '[H][H]'
-      concentration: 0.67
-    - label: O2
-      smiles: '[O][O]'
-      concentration: 0.33
-    - label: H
-      smiles: '[H]'
-      SA_observable: true
-    - label: OH
-      smiles: '[OH]'
-      SA_observable: true
-  reactors:
-    - type: gas batch constant T P
-      T: 1000
-      P: 1
-      termination_conversion:
-        'H2': 0.9
-      termination_time: [5, 's']
-  model:
-    core_tolerance: [0.01, 0.001]
+# --- Project Information ---
+# 'project': Required.
+project: MinimalBEESProject
 
-qm:
-  adapter: ARC
-  level_of_theory: 'b3lyp/6-31g(d,p)'
-  job_types:
-    rotors: false
-    conformers: true
-    fine: false
-    freq: true
-    opt: true
-    sp: true
+# --- Species Definition ---
+# 'species': Required At least one species 
+species:
+  - label: GenericSubstrate
+    concentration: 1.0
+    smiles: C1=CC=CC=C1 # Example SMILES for a generic substrate
+    reactive: true 
+    observable: true 
+   
+
+    
+
+# --- Enzyme Definition ---
+
+enzymes:
+  - label: GenericEnzyme
+    concentration: 1e-6 
+    ecnumber: EC
+    reactive: true 
+    
+# --- Environment Settings ---
+
+environment:
+  temperature: 298.15 
+  pH: 7.0 
+
+
+
+# --- Database Settings ---
+# 'database': Required parameters 
+database:
+  name: MinimalDB 
+  parameter_estimator: ML 
+  rate_law: Michaelis-Menten 
+
+# --- Application Settings ---
+# 'settings': Required parameters
+settings:
+  end_time: 100.0 
+  time_step: 0.1 
+  solver: odeint 
